[gd_scene load_steps=21 format=3 uid="uid://b101tedcqcq5v"]

[ext_resource type="Script" path="res://scenes/mecha/BaseMecha.gd" id="1_0gymd"]
[ext_resource type="Script" path="res://scenes/mecha/mecha_stats.gd" id="2_j8l85"]
[ext_resource type="Texture2D" uid="uid://cjmcdi68ehqv5" path="res://asset/placeholders/tilesets/colored_topdown_16bit/Characters/char_01.png" id="2_suo2y"]
[ext_resource type="AudioStream" uid="uid://04oe1fwg4ext" path="res://asset/placeholders/sfx/bw_1bit/Attack02.wav" id="4_xi874"]
[ext_resource type="Script" path="res://scenes/controllers/ControllerMovement.gd" id="5_akstm"]
[ext_resource type="Script" path="res://scenes/mecha/TargetableArea.gd" id="6_a1apb"]

[sub_resource type="Resource" id="Resource_1hgdl"]
script = ExtResource("2_j8l85")
start_hp = 100.0
start_hp_regen = 1.0
start_speed = 1.0
start_attack_speed = 1.0
start_projectile_speed = 10.0
start_damage = 10.0
start_range = 10.0

[sub_resource type="AtlasTexture" id="AtlasTexture_tpk5m"]
atlas = ExtResource("2_suo2y")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8w3hi"]
atlas = ExtResource("2_suo2y")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7vrn"]
atlas = ExtResource("2_suo2y")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ha6im"]
atlas = ExtResource("2_suo2y")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibity"]
atlas = ExtResource("2_suo2y")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgait"]
atlas = ExtResource("2_suo2y")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_53qom"]
atlas = ExtResource("2_suo2y")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7v6ds"]
atlas = ExtResource("2_suo2y")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_limet"]
atlas = ExtResource("2_suo2y")
region = Rect2(16, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_vrelx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpk5m")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8w3hi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7vrn")
}],
"loop": true,
"name": &"move_down",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ha6im")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibity")
}],
"loop": true,
"name": &"move_left",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgait")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_53qom")
}],
"loop": true,
"name": &"move_right",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7v6ds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_limet")
}],
"loop": true,
"name": &"move_up",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nb5b2"]
radius = 32.0
height = 64.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tfmtx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wkbjs"]

[node name="BaseMecha" type="CharacterBody2D" groups=["mecha"]]
script = ExtResource("1_0gymd")
starting_stats = SubResource("Resource_1hgdl")

[node name="Animations" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0.500001, -20.5)
scale = Vector2(5.4375, 6.5625)
sprite_frames = SubResource("SpriteFrames_vrelx")
animation = &"move_down"
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 3)
shape = SubResource("CapsuleShape2D_nb5b2")

[node name="Sound" type="Node" parent="."]

[node name="WalkPlayer" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource("4_xi874")
bus = &"SFXMechaHu"

[node name="ControllerMovement" type="Node" parent="."]
script = ExtResource("5_akstm")

[node name="TargetableArea" type="Area2D" parent="."]
script = ExtResource("6_a1apb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TargetableArea"]
scale = Vector2(1e-05, 1e-05)
shape = SubResource("CircleShape2D_tfmtx")

[node name="VisionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionArea"]
shape = SubResource("CircleShape2D_wkbjs")

[node name="ActionTimer" type="Timer" parent="."]

[connection signal="buff_attSp_Signal" from="TargetableArea" to="." method="buff_attSp"]
[connection signal="buff_damage_Signal" from="TargetableArea" to="." method="buff_damage"]
[connection signal="timeout" from="ActionTimer" to="." method="_on_action_timer_timeout"]
